# steam_search

./: .gitignore  README.txt
Steam_Search/: .gitignore  CMakeLists.txt  Game.cpp  Game.h  OrderedMap.cpp  OrderedMap.h  RapidFuzzie.cpp  RapidFuzzie.h  Set.cpp  Set.h  UnorderedMap.cpp  UnorderedMap.h  UnorderedSetOA.cpp  UnorderedSetOA.h  UnorderedSetSC.cpp  UnorderedSetSC.h  algorithms_B.cpp  algorithms_B.h  cosineSimilarity.cpp  cosineSimilarity.h  dataSet.txt  decoder.txt  jaccardsSimilarity.cpp  jaccardsSimilarity.h  main.cpp  minHash.cpp  minHash.h  multiFeatureSimilarity.cpp  multiFeatureSimilarity.h  readJson.cpp  readJson.h  steam_games.json  steam_games_less.json  tags.txt
steamspy_api_scraping/: lambda_function_base_games.py  run_lambda.py
steamspy_api_scraping/game_jsons/: merge_all_jsons.py  page-0_chunk-0-500.json  page-0_chunk-500-1000.json  page-10_chunk-0-500.json  page-10_chunk-500-1000.json  page-11_chunk-0-500.json  page-11_chunk-500-1000.json  page-12_chunk-0-500.json  page-12_chunk-500-1000.json  page-13_chunk-0-500.json  page-13_chunk-500-1000.json  page-14_chunk-0-500.json  page-14_chunk-500-1000.json  page-15_chunk-0-500.json  page-15_chunk-500-1000.json  page-16_chunk-0-500.json  page-16_chunk-500-1000.json  page-17_chunk-0-500.json  page-17_chunk-500-1000.json  page-18_chunk-0-500.json  page-18_chunk-500-1000.json  page-19_chunk-0-500.json  page-19_chunk-500-1000.json  page-1_chunk-0-500.json  page-1_chunk-500-1000.json  page-20_chunk-0-500.json  page-20_chunk-500-1000.json  page-21_chunk-0-500.json  page-21_chunk-500-1000.json  page-22_chunk-0-500.json  page-22_chunk-500-1000.json  page-23_chunk-0-500.json  page-23_chunk-500-1000.json  page-24_chunk-0-500.json  page-24_chunk-500-1000.json  page-25_chunk-0-500.json  page-25_chunk-500-1000.json  page-26_chunk-0-500.json  page-26_chunk-500-1000.json  page-27_chunk-0-500.json  (+136 more)
